{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 34,
  "lineage": "78244786-df87-7efb-4487-b4602e25bf96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0016e09064471f9",
            "arn": "arn:aws:ec2:us-east-1:106940013589:elastic-ip/eipalloc-0b0016e09064471f9",
            "association_id": "eipassoc-0deb3831f4d9233be",
            "domain": "vpc",
            "id": "eipalloc-0b0016e09064471f9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0059f21d2920938d9",
            "private_dns": "ip-10-0-1-176.ec2.internal",
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-34-196-79-24.compute-1.amazonaws.com",
            "public_ip": "34.196.79.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "FinOpsNote": "Elastic IP used for NAT Gateway cost visibility",
              "Name": "enterprise-aws-finops-nat-eip",
              "Project": "enterprise-aws-finops"
            },
            "tags_all": {
              "Environment": "demo",
              "FinOpsNote": "Elastic IP used for NAT Gateway cost visibility",
              "Name": "enterprise-aws-finops-nat-eip",
              "Project": "enterprise-aws-finops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "unused_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b2fff9872b6e056",
            "arn": "arn:aws:ec2:us-east-1:106940013589:elastic-ip/eipalloc-06b2fff9872b6e056",
            "domain": "vpc",
            "id": "eipalloc-06b2fff9872b6e056",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-112-32.compute-1.amazonaws.com",
            "public_ip": "52.86.112.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT-Operations",
              "Environment": "demo",
              "FinOpsNote": "Unused Elastic IP for FinOps reporting",
              "Name": "unused-elastic-ip"
            },
            "tags_all": {
              "Department": "IT-Operations",
              "Environment": "demo",
              "FinOpsNote": "Unused Elastic IP for FinOps reporting",
              "Name": "unused-elastic-ip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "accounts_payable_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed7d7210d3f78108",
            "arn": "arn:aws:ec2:us-east-1:106940013589:instance/i-0ce4703c872e9ec2a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce4703c872e9ec2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006defbaa6b32d740",
            "private_dns": "ip-10-0-2-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d12c6dacbc11aef3",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce6babb8ab6311ab",
            "tags": {
              "Application": "Invoice-Processing",
              "CostCenter": "FIN-2001",
              "Department": "Accounts-Payable",
              "Environment": "demo",
              "Name": "accounts-payable-invoice-server",
              "Owner": "Finance-Team"
            },
            "tags_all": {
              "Application": "Invoice-Processing",
              "CostCenter": "FIN-2001",
              "Department": "Accounts-Payable",
              "Environment": "demo",
              "Name": "accounts-payable-invoice-server",
              "Owner": "Finance-Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05911e65fc0fbdd4c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.department_sg",
            "aws_subnet.private_accounts_payable",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hr_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed7d7210d3f78108",
            "arn": "arn:aws:ec2:us-east-1:106940013589:instance/i-0af412c9ad07da723",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af412c9ad07da723",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b550729f7ad014b",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-32-192-242-172.compute-1.amazonaws.com",
            "public_ip": "32.192.242.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09deac24ff97a1dcb",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076f2524dce8785e2",
            "tags": {
              "Application": "Payroll",
              "CostCenter": "HR-1001",
              "Department": "HR",
              "Environment": "demo",
              "Name": "hr-payroll-app-server",
              "Owner": "HR-Operations"
            },
            "tags_all": {
              "Application": "Payroll",
              "CostCenter": "HR-1001",
              "Department": "HR",
              "Environment": "demo",
              "Name": "hr-payroll-app-server",
              "Owner": "HR-Operations"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05911e65fc0fbdd4c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.department_sg",
            "aws_subnet.public_hr",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "it_ops_idle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed7d7210d3f78108",
            "arn": "arn:aws:ec2:us-east-1:106940013589:instance/i-073b7d4028c84a1d9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073b7d4028c84a1d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c331aad71c5fd9b2",
            "private_dns": "ip-10-0-3-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-052254b586f9dae70",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7a44e51a6ba9618",
            "tags": {
              "Application": "Infrastructure-Management",
              "CostCenter": "IT-3001",
              "Department": "IT-Operations",
              "Environment": "demo",
              "FinOpsNote": "Idle server for rightsizing and waste analysis",
              "Name": "it-ops-idle-server",
              "Owner": "IT-Ops-Team"
            },
            "tags_all": {
              "Application": "Infrastructure-Management",
              "CostCenter": "IT-3001",
              "Department": "IT-Operations",
              "Environment": "demo",
              "FinOpsNote": "Idle server for rightsizing and waste analysis",
              "Name": "it-ops-idle-server",
              "Owner": "IT-Ops-Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05911e65fc0fbdd4c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.department_sg",
            "aws_subnet.private_it_ops",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "security_stopped",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed7d7210d3f78108",
            "arn": "arn:aws:ec2:us-east-1:106940013589:instance/i-0ed140a0f23d191cc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed140a0f23d191cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f1faaf77a9a9ca2",
            "private_dns": "ip-10-0-4-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01d89402392bb949e",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dc2cffecd801d1c",
            "tags": {
              "Application": "Security-Monitoring",
              "CostCenter": "SEC-4001",
              "Department": "Security",
              "Environment": "demo",
              "FinOpsNote": "Stopped instance for unused resource analysis",
              "Name": "security-stopped-test-server",
              "Owner": "Security-Team"
            },
            "tags_all": {
              "Application": "Security-Monitoring",
              "CostCenter": "SEC-4001",
              "Department": "Security",
              "Environment": "demo",
              "FinOpsNote": "Stopped instance for unused resource analysis",
              "Name": "security-stopped-test-server",
              "Owner": "Security-Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05911e65fc0fbdd4c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.department_sg",
            "aws_subnet.private_security",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:internet-gateway/igw-0bd137539436135f2",
            "id": "igw-0bd137539436135f2",
            "owner_id": "106940013589",
            "tags": {
              "Environment": "demo",
              "Name": "enterprise-aws-finops-igw",
              "Project": "enterprise-aws-finops"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "enterprise-aws-finops-igw",
              "Project": "enterprise-aws-finops"
            },
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0016e09064471f9",
            "association_id": "eipassoc-0deb3831f4d9233be",
            "connectivity_type": "public",
            "id": "nat-0832435c8dd86f214",
            "network_interface_id": "eni-0059f21d2920938d9",
            "private_ip": "10.0.1.176",
            "public_ip": "34.196.79.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-076f2524dce8785e2",
            "tags": {
              "Environment": "demo",
              "FinOpsNote": "Temporary NAT Gateway for enterprise cost analysis",
              "Name": "enterprise-aws-finops-nat-gateway",
              "Project": "enterprise-aws-finops"
            },
            "tags_all": {
              "Environment": "demo",
              "FinOpsNote": "Temporary NAT Gateway for enterprise cost analysis",
              "Name": "enterprise-aws-finops-nat-gateway",
              "Project": "enterprise-aws-finops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:route-table/rtb-0038b6a654e26ca78",
            "id": "rtb-0038b6a654e26ca78",
            "owner_id": "106940013589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0832435c8dd86f214",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "FinOpsNote": "Private subnets route outbound internet through NAT Gateway",
              "Name": "enterprise-aws-finops-private-rt"
            },
            "tags_all": {
              "Environment": "demo",
              "FinOpsNote": "Private subnets route outbound internet through NAT Gateway",
              "Name": "enterprise-aws-finops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:route-table/rtb-05d4140eab9608268",
            "id": "rtb-05d4140eab9608268",
            "owner_id": "106940013589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd137539436135f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "enterprise-aws-finops-public-rt"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "enterprise-aws-finops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_accounts_payable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a559b98c919dea",
            "route_table_id": "rtb-0038b6a654e26ca78",
            "subnet_id": "subnet-0ce6babb8ab6311ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_accounts_payable",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_it_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0277234d881eda536",
            "route_table_id": "rtb-0038b6a654e26ca78",
            "subnet_id": "subnet-0c7a44e51a6ba9618"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_it_ops",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051d85084636d7216",
            "route_table_id": "rtb-0038b6a654e26ca78",
            "subnet_id": "subnet-09dc2cffecd801d1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_security",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_hr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0464881d70396f8fe",
            "route_table_id": "rtb-05d4140eab9608268",
            "subnet_id": "subnet-076f2524dce8785e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_hr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "department_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:security-group/sg-05911e65fc0fbdd4c",
            "description": "Security group for enterprise department servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05911e65fc0fbdd4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP for demo web access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "100.16.125.31/32"
                ],
                "description": "Allow SSH from trusted IP for administration",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "enterprise-aws-finops-department-sg",
            "name_prefix": "",
            "owner_id": "106940013589",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "ENT-1000",
              "Environment": "demo",
              "Name": "enterprise-aws-finops-department-sg",
              "Owner": "Cloud-FinOps-Team",
              "Project": "enterprise-aws-finops"
            },
            "tags_all": {
              "CostCenter": "ENT-1000",
              "Environment": "demo",
              "Name": "enterprise-aws-finops-department-sg",
              "Owner": "Cloud-FinOps-Team",
              "Project": "enterprise-aws-finops"
            },
            "timeouts": null,
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_accounts_payable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:subnet/subnet-0ce6babb8ab6311ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce6babb8ab6311ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106940013589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Invoice-Processing",
              "CostCenter": "FIN-2001",
              "Department": "Accounts-Payable",
              "Environment": "demo",
              "Name": "private-accounts-payable-subnet"
            },
            "tags_all": {
              "Application": "Invoice-Processing",
              "CostCenter": "FIN-2001",
              "Department": "Accounts-Payable",
              "Environment": "demo",
              "Name": "private-accounts-payable-subnet"
            },
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_it_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:subnet/subnet-0c7a44e51a6ba9618",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a44e51a6ba9618",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106940013589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Infrastructure-Management",
              "CostCenter": "IT-3001",
              "Department": "IT-Operations",
              "Environment": "demo",
              "Name": "private-it-ops-subnet"
            },
            "tags_all": {
              "Application": "Infrastructure-Management",
              "CostCenter": "IT-3001",
              "Department": "IT-Operations",
              "Environment": "demo",
              "Name": "private-it-ops-subnet"
            },
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:subnet/subnet-09dc2cffecd801d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc2cffecd801d1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106940013589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Security-Monitoring",
              "CostCenter": "SEC-4001",
              "Department": "Security",
              "Environment": "demo",
              "Name": "private-security-subnet"
            },
            "tags_all": {
              "Application": "Security-Monitoring",
              "CostCenter": "SEC-4001",
              "Department": "Security",
              "Environment": "demo",
              "Name": "private-security-subnet"
            },
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_hr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:subnet/subnet-076f2524dce8785e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076f2524dce8785e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106940013589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Payroll",
              "CostCenter": "HR-1001",
              "Department": "HR",
              "Environment": "demo",
              "Name": "public-hr-subnet"
            },
            "tags_all": {
              "Application": "Payroll",
              "CostCenter": "HR-1001",
              "Department": "HR",
              "Environment": "demo",
              "Name": "public-hr-subnet"
            },
            "vpc_id": "vpc-052a650bc88a30f68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106940013589:vpc/vpc-052a650bc88a30f68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d7209b463a2000a",
            "default_route_table_id": "rtb-0ac0d936c6b45678e",
            "default_security_group_id": "sg-0d2e89789bfcb900c",
            "dhcp_options_id": "dopt-0c7cfeaafff8221f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052a650bc88a30f68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac0d936c6b45678e",
            "owner_id": "106940013589",
            "tags": {
              "CostCenter": "ENT-1000",
              "Environment": "demo",
              "Name": "enterprise-aws-finops-vpc",
              "Owner": "Cloud-FinOps-Team",
              "Project": "enterprise-aws-finops"
            },
            "tags_all": {
              "CostCenter": "ENT-1000",
              "Environment": "demo",
              "Name": "enterprise-aws-finops-vpc",
              "Owner": "Cloud-FinOps-Team",
              "Project": "enterprise-aws-finops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}